Tests/context/invalid/class39.java
class A{
    int a;
    int somme(int a, int b){
        int c=a+b;
    }
}

{
    
}